<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmiCalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/calculate"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mortgage"
            android:textColor="@color/purple_700"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text1"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/mortgage_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loan_amount_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:hint="@string/loan_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:prefixText="Rs."
            app:suffixText=" /-">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loan_amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loan_length_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/length_of_loan"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/loan_amount_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/loan_amount_edit_text" />

        <TextView
            android:id="@+id/loan_length_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/loan_amount_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/loan_amount_edit_text"
            tools:text="@string/loan_length_count" />

        <com.google.android.material.slider.Slider
            android:id="@+id/loan_length_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/length_of_loan"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="300"
            app:layout_constraintEnd_toEndOf="@+id/loan_length_count_tv"
            app:layout_constraintStart_toStartOf="@+id/loan_length_tv"
            app:layout_constraintTop_toBottomOf="@+id/loan_length_tv" />

        <TextView
            android:id="@+id/down_payment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/down_payment"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_length_slider" />

        <TextView
            android:id="@+id/down_payment_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_length_slider"
            tools:text="@string/down_payment_amount" />

        <com.google.android.material.slider.Slider
            android:id="@+id/down_payment_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/down_payment"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/down_payment_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/percentage_rate_count_tv"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/interest_rate"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/down_payment_slider"
            app:suffixText="%">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loan_percentage_rate_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/result_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/down_payment_slider"
            tools:text="@string/result_emi_amount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/see_details_btn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/see_details"
            android:textSize="11sp"
            app:cornerRadius="20dp"
            app:icon="@drawable/navigate_next"
            app:iconGravity="end"
            app:iconSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/result_amount"
            app:layout_constraintTop_toBottomOf="@+id/result_amount"
            app:layout_goneMarginEnd="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>